# Rust-GRPC-Server-Template

./: Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  rustup.sh
.circleci/: config.yml
api/account/: authorization_service.proto
config/: docker_config.yaml
migrations/down/: 20230402132837_CreateAccounts.down.sql
migrations/up/: 20230402132523_CreateUpdateFunction.up.sql  20230402132837_CreateAccounts.up.sql
src/: lib.rs  server.rs
src/internal/account/: mod.rs  store.rs
tests/: account_test.rs  auth_test.rs
